<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contact_list"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_bluetooth_device"
            android:icon="@android:drawable/stat_sys_data_bluetooth"
            android:title="@string/menu_bluetooth" />
        <item
            android:id="@+id/nav_bluetooth_event"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/event_logs" />
        <item
            android:id="@+id/nav_notification_log"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Log out" />


    </group>
</menu>